examples/errors/parsing/functions-no-effect.cn
fun double : int -> int = {
  x -> x + x
}

main : () [impure] = ()
